--- a/apps/client/assets/components/_navbar.scss
+++ b/apps/client/assets/components/_navbar.scss
@@ -4,7 +4,7 @@
   align-items: center;
   gap: 10px;
   color: black;
-  font-size: .875rem;
+  font-size: 0.875rem;
   justify-content: space-between;
 
   .navbar__logo {
@@ -21,7 +21,7 @@
     gap: 30px;
 
     a {
-      font-size: .9rem;
+      font-size: 0.9rem;
     }
 
     .switch-theme {
@@ -33,5 +33,4 @@
       align-items: center;
     }
   }
-
 }
