--- a/apps/client/assets/main.scss
+++ b/apps/client/assets/main.scss
@@ -1,5 +1,5 @@
 @import "variants";
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;700&display=swap");
 
 * {
   padding: 0;
@@ -7,6 +7,16 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-family: "Outfit", sans-serif;
+}
+
+.darkmode--activated {
+  background: #000;
+  color: #fff;
+}
+
+.darkmode--activated p,
+.darkmode--activated li {
+  color: #000;
 }
 
 a {
@@ -31,13 +41,13 @@ a {
   border: none;
   cursor: pointer;
   transition: 0.4s;
+  isolation: isolate;
 
   &:hover {
-    background: #5856D6FF;
+    background: #5856d6ff;
     color: white;
   }
 }
-
 
 @import "components/navbar";
 @import "components/project-preview";
